Fixed overlap on IE and Opera (thanks to @Soeldner on #218)

--- a/css/template.less
+++ b/css/template.less
@@ -255,12 +255,16 @@ header {
 #dw__footer {
 
   position: absolute;
-  bottom: initial;
-  margin-top: 50px;
+  left: 0;
+  right: 0;
+  border-radius: 0px;
+  border-width: 1px 0 0 0;
+  margin: 50px 0 0 0;
   z-index: 995;
 
   .navbar-text {
     float: initial;
+    width: 100%;
     margin-left: 0;
     margin-right: 0;
   }
